--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
   "name": "dual-listbox",
-  "version": "0.0.0",
+  "version": "3.0.0",
+  "description": "Dual List Box for Angular",
+  "keywords": [
+    "dual list box",
+    "dual-listbox",
+    "duallistbox",
+    "angular dual listbox",
+    "cm-angular-dual-listbox",
+    "cm",
+    "angular",
+    "angular 14",
+    "angular 15",
+    "angular 16"
+  ],
+  "author": "Maram Chandrasekhar Reddy",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,24 +25,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.10",
-    "@angular/common": "^15.2.10",
-    "@angular/compiler": "^15.2.10",
-    "@angular/core": "^15.2.10",
-    "@angular/forms": "^15.2.10",
-    "@angular/platform-browser": "^15.2.10",
-    "@angular/platform-browser-dynamic": "^15.2.10",
-    "@angular/router": "^15.2.10",
+    "@angular/animations": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "bootstrap": "^5.2.0",
-    "cm-angular-dual-listbox": "^2.1.1",
+    "cm-angular-dual-listbox": "^3.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.10",
-    "@angular/cli": "~15.2.10",
-    "@angular/compiler-cli": "^15.2.10",
+    "@angular-devkit/build-angular": "^16.2.12",
+    "@angular/cli": "~16.2.12",
+    "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
