--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "preserveSymlinks": true,
             "outputPath": "dist/dual-listbox",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -69,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "dual-listbox:build:production"
+              "buildTarget": "dual-listbox:build:production"
             },
             "development": {
-              "browserTarget": "dual-listbox:build:development"
+              "buildTarget": "dual-listbox:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -80,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "dual-listbox:build"
+            "buildTarget": "dual-listbox:build"
           }
         },
         "test": {
